[package]
name = "btcmap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rusqlite = "0.27.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
anyhow = "1.0.57"